--- a/styles/style.css
+++ b/styles/style.css
@@ -69,3 +69,11 @@ header {
 .contSlider {
   padding: 0;
 }
+
+.columnaPost {
+  background-color: #A5C9CA;
+}
+
+.columnaForm {
+  background-color: #395B64;
+}
