Agregando/modificando detalles del main

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,10 @@ header {
   background-color: #2C3333;
 }
 
+.border-navbar {
+  box-shadow: 0px 2px 20px black;
+}
+
 .button {
   color: black
 }
@@ -79,7 +83,7 @@ main {
 }
 
 .columnaPost {
-  background-color: #fff;
+  background-color: #395B64;
 }
 
 .columnaForm {
@@ -111,6 +115,10 @@ main {
 
 .botonGallery {
   border-radius: 5px;
+}
+
+.btn-leer {
+  background: #A5C9CA;
 }
 
 /* main page end */
