--- a/styles/style.css
+++ b/styles/style.css
@@ -257,7 +257,7 @@ color: white;
 border-radius: 200px;
 }
 
-.card > img {
+.card > .imgAcercaDe {
   width: 100%;
   height: 400px;
   margin-bottom: 30px;
