--- a/styles/style.css
+++ b/styles/style.css
@@ -277,3 +277,13 @@ border-radius: 200px;
   padding: 20px;
   background-color: #E7F6F2;
 }
+
+.imgStyle {
+  width: 100%;
+  height: 300px;
+}
+
+.imgStyle2 {
+  width: 100%;
+  height: 100%;
+}
