--- a/styles/style.css
+++ b/styles/style.css
@@ -287,3 +287,14 @@ border-radius: 200px;
   width: 100%;
   height: 100%;
 }
+
+.imgComent {
+  width: 64px;
+  height: 64px;
+  border-radius: 10px;
+  margin: 10px;
+}
+
+.comentario {
+  margin: 10px;
+}
