--- a/styles/style.css
+++ b/styles/style.css
@@ -280,12 +280,15 @@ border-radius: 200px;
 
 .imgStyle {
   width: 100%;
-  height: 300px;
+  height: 400px;
+  border-radius: 15px;
+  margin-top: 40px;
 }
 
 .imgStyle2 {
   width: 100%;
   height: 100%;
+  border-radius: 15px;
 }
 
 .imgComent {
