variables de colores añadidas

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,17 +1,30 @@
+:root {
+  --color1: #2c3333;
+  --color2: #A5C9CA;
+  --color3: #E7F6F2;
+  --color4: #ccc;
+  --color5: #000;
+  --color6: #395B64;
+  --color7: #393939;
+  --color8: #fff;
+  --color9: white;
+  --color10: #1d1c1c;
+}
+
 * {
   font-family: 'Mulish', sans-serif;
 }
 
 header {
-  background-color: #2C3333;
+  background-color: var(--color1);
 }
 
 .border-navbar {
-  box-shadow: 0px 2px 20px black;
+  box-shadow: 0px 2px 20px var(--color5);
 }
 
 .button {
-  color: black
+  color: var(--color5)
 }
 
 .cont {
@@ -19,19 +32,19 @@ header {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #A5C9CA;
+    background-color: var(--color2);
   }
 
 .form-container {
-    border: 1px solid #ccc;
+    border: 1px solid var(--color4);
     border-radius: 5px;
     padding: 20px;
-    background-color: #E7F6F2;
+    background-color: var(--color3);
 }
 
 .container a{
     text-decoration: none;
-    color: black;
+    color: var(--color5);
 }
 
  @media (min-width: 768px) {
@@ -56,7 +69,7 @@ main {
 /* footer start*/
 
 .footer {
-  background-color: #2C3333;
+  background-color: var(--color1);
 }
 
 .iconRedes {
@@ -84,11 +97,11 @@ main {
 }
 
 .columnaPost {
-  background-color: #395B64;
+  background-color: var(--color6);
 }
 
 .columnaForm {
-  background-color: #393939;
+  background-color: var(--color7);
 }
 
 .card-img-top {
@@ -100,8 +113,8 @@ main {
 }
 
 .card {
-  background-color: #2C3333;
-  color: #fff;
+  background-color: var(--color1);
+  color: var(--color4);
 }
 
 .columnaForm > .container > .card-img-top {
@@ -116,13 +129,13 @@ main {
 
 .botonGallery {
   border-radius: 5px;
-  background-color: #A5C9CA;
+  background-color: var(--color2);
 }
 
 .btn-leer {
-  background: #A5C9CA;
+  background: var(--color2);
   transition: all 400ms ease;
-  border: 1px solid white;
+  border: 1px solid var(--color9);
 }
 
 .btn-leer:hover {
@@ -135,7 +148,7 @@ main {
 /* gallery start */
 
 .containerGalleryInner {
-  background-color: #393939;
+  background-color: var(--color7);
 }
 
 .containerImgGallery > img {
@@ -157,16 +170,16 @@ main {
 }
 
 .contenedor {
-  background-color: #395B64;
+  background-color: var(--color6);
 }
 
 .iframe {
   border-radius: 5px;
-  box-shadow: 5px 5px 20px #1d1c1c;
+  box-shadow: 5px 5px 20px var(--color10);
 }
 
 h1 {
-  border-bottom: 5px solid #A5C9CA;
+  border-bottom: 5px solid var(--color2);
 }
 
 .cardContacto {
@@ -180,19 +193,19 @@ h1 {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #A5C9CA;
+  background-color: var(--color2);
 }
 
 .form-container {
-  border: 1px solid #ccc;
+  border: 1px solid var(--color4);
   border-radius: 5px;
   padding: 20px;
-  background-color: #E7F6F2;
+  background-color: var(--color3);
 }
 
 .container a{
   text-decoration: none;
-  color: black;
+  color: var(--color5);
 }
 
 @media (min-width: 768px) {
@@ -211,7 +224,7 @@ h1 {
 }
 
 body {
-background-color: #395B64;
+background-color: var(--color6);
 }
 
 /* h1 {
@@ -219,17 +232,17 @@ background-color: #A5C9CA;
 } */
 
 .sobre-nosotros {
-background-color: #A5C9CA;
+background-color: var(--color2);
 }
 
 h1 {
-border-bottom: 5px solid #A5C9CA;
+border-bottom: 5px solid var(--color2);
 padding-bottom: 10px;
 }
 
 .tarjets {
-background-color: #395B64;
-border: #395B64;
+background-color: var(--color6);
+border: var(--color6);
 transition: all 400ms ease;
 }
 
@@ -248,7 +261,7 @@ transform: translateY(-3%);
 }
 
 .button-rounded-container {
-background-color: #A5C9CA;
+background-color: var(--color2);
 padding: 10px;
 border-radius: 200px;
 width: 400px;
@@ -257,12 +270,12 @@ width: 400px;
 .button-rounded {
 padding: 8px 12px;
 text-decoration: none;
-color: #395B64;
+color: var(--color6);
 }
 
 .button-rounded:hover {
-background-color: #395B64;
-color: white;
+background-color: var(--color6);
+color: var(--color9);
 border-radius: 200px;
 }
 
@@ -276,14 +289,14 @@ border-radius: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #A5C9CA;
+  background-color: var(--color2);
 }
 
 .form-container {
-  border: 1px solid #ccc;
+  border: 1px solid var(--color4);
   border-radius: 5px;
   padding: 20px;
-  background-color: #E7F6F2;
+  background-color: var(--color3);
 }
 
 .imgStyle {
